--- a/argo_code/deployments/qa_deployment.yaml
+++ b/argo_code/deployments/qa_deployment.yaml
@@ -1,19 +1,19 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: myapp
+  name: qamyapp
 spec:
   selector:
     matchLabels:
-      app: myapp
+      app: qamyapp
   replicas: 2
   template:
     metadata:
       labels:
-        app: myapp
+        app: qamyapp
     spec:
       containers:
-      - name: myapp
+      - name: qamyapp
         image: nanajanashia/argocd-app:1.2 
         ports:
         - containerPort: 8080
