--- a/argo_code/deployments/int_deployment.yaml
+++ b/argo_code/deployments/int_deployment.yaml
@@ -1,19 +1,19 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: myapp
+  name: int-myapp-deployment
 spec:
   selector:
     matchLabels:
-      app: myapp
+      app: int-myapp-deployment
   replicas: 2
   template:
     metadata:
       labels:
-        app: myapp
+        app: int-myapp-deployment
     spec:
       containers:
-      - name: myapp
+      - name: int-myapp-deployment
         image: nanajanashia/argocd-app:1.0
         ports:
         - containerPort: 8080
