--- a/argo_code/qa_kustomizable/kustomization.yaml
+++ b/argo_code/qa_kustomizable/kustomization.yaml
@@ -1,5 +1,5 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-- deployments/qa_deployment.yaml
-- ConfigMaps/qaconfigmaps.yaml
+- ../deployments/qa_deployment.yaml
+- ../ConfigMaps/qaconfigmaps.yaml
