--- a/argo_code/int/int_kustomization.yaml
+++ b/argo_code/int/int_kustomization.yaml
@@ -1,5 +1,5 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-- argo_code/deployments/int_deployment.yaml
-- argo_code/ConfigMaps/intconfigmaps.yaml
+- int_deployment.yaml
+- intconfigmaps.yaml
