--- a/argo_code/qa/qaconfigmaps.yaml
+++ b/argo_code/qa/qaconfigmaps.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: myapp-configmap
+  name: qa-audit-configmap
 data:
   ENV_VAR_1: "qasecret1"
   ENV_VAR_2: "qasecret2"
