--- a/argo_code/qa/kustomization.yaml
+++ b/argo_code/qa/kustomization.yaml
@@ -1,5 +1,6 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
+bases: ../base
 resources:
 - qa_deployment.yaml
 - qaconfigmaps.yaml
